modal overlay edded

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,11 +98,25 @@ body {
 
   line-height: 1.5;
   letter-spacing: 0.02em;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus {
   color: var(--color-active);
+}
+
+.curent::after {
+content: "";
+position: absolute;
+left: 0;
+bottom: 0;
+width: 100%;
+height: 4px;
+background-color: var(--color-active);
+border-radius: 2px;
+
 }
 
 .address {
@@ -123,6 +137,7 @@ body {
   color: var(--secondary-color);
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -180,6 +195,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -313,6 +329,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tem-soc-link:hover,
@@ -345,6 +362,7 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--cusromers-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon {
@@ -420,6 +438,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-icon {
@@ -479,6 +498,10 @@ body {
   flex-basis: calc((100% - 48px) / 3);
 }
 
+.examples-item:hover .examples-cover-text {
+  transform: translateY(0);
+}
+
 /* .examples-item:not(:nth-child(3n)) {
   margin-right: 24px;
 }
@@ -504,4 +527,82 @@ body {
   padding: 32px 16px;
   border: 1px solid var(--border-color);
   border-top: none;
+}
+
+.examples-cover-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.examples-cover-text {
+  position: absolute;
+  top: 0;
+  margin-top: 0;
+  color: var(--light-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  background-color: var(--color-brand);
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 300ms linear;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 300ms linear, visibility 300ms linear;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 300ms linear;
+  width: 408px;
+  min-height: 584px;
+  background-color: var(--invert-color);
+  border-radius: 5px;
+  padding: 32px;
+}
+
+.backdrop.is-hiden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-close {
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--border-color);
+  border-radius: 50%;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  color: var(--color-primary);
+}
+
+.modal-close-icon {
+  fill: currentColor;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: var(--color-active);
+  color: var(--invert-color);
+}
+
+.is-hidden {
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
 }
