--- a/css/styles.css
+++ b/css/styles.css
@@ -108,15 +108,18 @@ body {
 }
 
 .curent::after {
-content: "";
-position: absolute;
-left: 0;
-bottom: 0;
-width: 100%;
-height: 4px;
-background-color: var(--color-active);
-border-radius: 2px;
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-active);
+  border-radius: 2px;
+}
 
+.nav-link.curent {
+  color: var(--color-active);
 }
 
 .address {
@@ -362,7 +365,8 @@ border-radius: 2px;
   align-items: center;
   justify-content: center;
   color: var(--cusromers-color);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon {
@@ -471,7 +475,10 @@ border-radius: 2px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.04em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover,
@@ -500,7 +507,8 @@ border-radius: 2px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-item:hover .examples-cover-text {
+.examples-item:hover .examples-cover-text,
+.examples-item:focus .examples-cover-text {
   transform: translateY(0);
 }
 
@@ -546,14 +554,14 @@ border-radius: 2px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   background-color: var(--color-brand);
   height: 100%;
   transform: translateY(100%);
-  transition: transform 300ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* Modal */
 
 .backdrop {
   position: fixed;
@@ -561,7 +569,8 @@ border-radius: 2px;
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 300ms linear, visibility 300ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -572,9 +581,16 @@ border-radius: 2px;
   transition: transform 300ms linear;
   width: 408px;
   min-height: 584px;
-  background-color: var(--invert-color);
-  border-radius: 5px;
+  background: #fcfcfc;
+  border-radius: 4px;
   padding: 32px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  visibility: hidden;
 }
 
 .backdrop.is-hiden .modal {
@@ -582,6 +598,9 @@ border-radius: 2px;
 }
 
 .modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -590,18 +609,24 @@ border-radius: 2px;
   margin-left: auto;
   display: flex;
   align-items: center;
-  align-content: center;
+  justify-content: center;
+  padding: 0;
+  cursor: pointer;
   color: var(--color-primary);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-icon {
   fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
 .modal-close:focus {
   background-color: var(--color-active);
   color: var(--invert-color);
+  border: none;
 }
 
 .is-hidden {
