--- a/css/styles.css
+++ b/css/styles.css
@@ -507,8 +507,8 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-item:hover .examples-cover-text,
-.examples-item:focus .examples-cover-text {
+.examples-link:hover .examples-cover-text,
+.examples-link:focus .examples-cover-text {
   transform: translateY(0);
 }
 
