--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ body {
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--color-active);
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ----------------Advantages section----------------- */
