--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --border-color: #e7e9fc;
   --soc-active-color: #31d0aa;
   --cusromers-color: #8e8f99;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 img {
@@ -99,7 +100,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
 }
 
 .nav-link:hover,
@@ -140,7 +141,7 @@ body {
   color: var(--secondary-color);
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition);
 }
 
 .contact-link:hover,
@@ -198,13 +199,12 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--color-active);
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ----------------Advantages section----------------- */
