--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 
 .tem-soc-link:hover,
@@ -366,8 +366,8 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--cusromers-color);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color var(--transition),
+    color var(--transition);
 }
 
 .customers-icon {
@@ -443,7 +443,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
 }
 
 .footer-soc-icon {
@@ -476,10 +476,10 @@ body {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.04em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition),
+    background-color var(--transition),
+    border-color var(--transition),
+    box-shadow var(--transition);
 }
 
 .filter-button:hover,
@@ -505,7 +505,7 @@ body {
 
 .examples-item {
   flex-basis: calc((100% - 48px) / 3);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition);
 }
 
 .examples-link:hover .examples-cover-text,
@@ -519,7 +519,7 @@ body {
 
 .examples-link {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--transition);
 }
 
 .examples-link:hover,
@@ -552,7 +552,7 @@ body {
   background-color: var(--color-brand);
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition);
 }
 
 /* Modal */
@@ -563,8 +563,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--transition),
+    visibility var(--transition);
 }
 
 .modal {
@@ -572,7 +572,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--transition);
   width: 408px;
   min-height: 584px;
   background: #fcfcfc;
@@ -608,13 +608,13 @@ body {
   padding: 0;
   cursor: pointer;
   color: var(--color-primary);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition),
+    border var(--transition);
 }
 
 .modal-close-icon {
   fill: currentColor;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--transition);
 }
 
 .modal-close:hover,
