--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --border-color: #e7e9fc;
   --soc-active-color: #31d0aa;
   --cusromers-color: #8e8f99;
-  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 img {
@@ -187,6 +187,7 @@ body {
   display: block;
   margin: 0 auto;
   min-width: 169px;
+  transition: background-color var(--transition);
 
   color: var(--invert-color);
   background-color: var(--color-brand);
@@ -199,7 +200,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  transition: background-color var(--transition);
 }
 
 .hero-button:hover,
@@ -366,8 +366,7 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--cusromers-color);
-  transition: border-color var(--transition),
-    color var(--transition);
+  transition: border-color var(--transition), color var(--transition);
 }
 
 .customers-icon {
@@ -476,10 +475,8 @@ body {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.04em;
-  transition: color var(--transition),
-    background-color var(--transition),
-    border-color var(--transition),
-    box-shadow var(--transition);
+  transition: color var(--transition), background-color var(--transition),
+    border-color var(--transition), box-shadow var(--transition);
 }
 
 .filter-button:hover,
@@ -506,11 +503,6 @@ body {
 .examples-item {
   flex-basis: calc((100% - 48px) / 3);
   transition: transform var(--transition);
-}
-
-.examples-link:hover .examples-cover-text,
-.examples-link:focus .examples-cover-text {
-  transform: translateY(0);
 }
 
 .content-category {
@@ -541,8 +533,12 @@ body {
 
 .examples-cover-text {
   position: absolute;
+  height: 100%;
   top: 0;
   margin-top: 0;
+  transform: translateY(100%);
+  transition: transform var(--transition);
+
   color: var(--light-color);
   font-weight: 400;
   font-size: 16px;
@@ -550,9 +546,11 @@ body {
   letter-spacing: 0.02em;
   padding: 40px 32px;
   background-color: var(--color-brand);
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform var(--transition);
+}
+
+.examples-link:hover .examples-cover-text,
+.examples-link:focus .examples-cover-text {
+  transform: translateY(0);
 }
 
 /* Modal */
@@ -563,8 +561,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity var(--transition),
-    visibility var(--transition);
+  transition: opacity var(--transition), visibility var(--transition);
 }
 
 .modal {
@@ -575,6 +572,7 @@ body {
   transition: transform var(--transition);
   width: 408px;
   min-height: 584px;
+
   background: #fcfcfc;
   border-radius: 4px;
   padding: 32px;
@@ -585,7 +583,7 @@ body {
 .backdrop.is-hiden .modal {
   transform: translate(-50%, -50%) scale(0);
 }
- 
+
 .is-hidden {
   visibility: hidden;
   opacity: 0;
@@ -598,18 +596,18 @@ body {
   right: 24px;
   width: 24px;
   height: 24px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--border-color);
-  border-radius: 50%;
-  margin-left: auto;
+  transition: background-color var(--transition), border var(--transition);
   display: flex;
+  margin-left: auto;
   align-items: center;
   justify-content: center;
   padding: 0;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--border-color);
+  border-radius: 50%;
   cursor: pointer;
   color: var(--color-primary);
-  transition: background-color var(--transition),
-    border var(--transition);
 }
 
 .modal-close-icon {
@@ -626,6 +624,5 @@ body {
 
 .modal-close:hover .modal-close-icon,
 .modal-close:focus .modal-close-icon {
-fill: var(--invert-color);
-} 
-
+  fill: var(--invert-color);
+}
