--- a/css/styles.css
+++ b/css/styles.css
@@ -590,7 +590,7 @@ body {
   pointer-events: none;
 }
 
-.modal-close {
+.modal-close-btn {
   position: absolute;
   top: 24px;
   right: 24px;
@@ -615,14 +615,14 @@ body {
   transition: fill var(--transition);
 }
 
-.modal-close:hover,
-.modal-close:focus {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
   background-color: var(--color-active);
   /* color: var(--invert-color); */
   border: none;
 }
 
-.modal-close:hover .modal-close-icon,
-.modal-close:focus .modal-close-icon {
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon {
   fill: var(--invert-color);
 }
