--- a/css/styles.css
+++ b/css/styles.css
@@ -618,11 +618,11 @@ body {
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: var(--color-active);
-  /* color: var(--invert-color); */
+  color: var(--invert-color);
   border: none;
 }
 
-.modal-close-btn:hover .modal-close-icon,
+/* .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
   fill: var(--invert-color);
-}
+} */
