--- a/css/styles.css
+++ b/css/styles.css
@@ -596,18 +596,19 @@ body {
   right: 24px;
   width: 24px;
   height: 24px;
-  transition: background-color var(--transition), border var(--transition);
-  display: flex;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  
+  display: block;
   margin-left: auto;
+  display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
-
-  border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--border-color);
-  border-radius: 50%;
-  cursor: pointer;
   color: var(--color-primary);
+  transition: background-color var(--transition), border var(--transition);
 }
 
 .modal-close-icon {
