--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   
-  display: block;
+  /* display: block; */
   margin-left: auto;
   display: flex;
   align-items: center;
